--- a/emulatordetection/build.gradle
+++ b/emulatordetection/build.gradle
@@ -15,8 +15,8 @@ android {
     defaultConfig {
         minSdk 24
 
-        versionCode 1
-        versionName "1.0"
+        versionCode 4
+        versionName "4.0"
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         }
@@ -34,8 +34,7 @@ android {
                     }
                 }
                 //into project.buildDir
-                into(layout.buildDirectory.dir("../../ReleaseFiles"))
-
+                into(layout.buildDirectory.dir("../../release"))
             }
             project.tasks.getByName(assembleTaskName).finalizedBy(copyTaskName)
         }
@@ -63,7 +62,4 @@ android {
         }
     }
     ndkVersion = '25.1.8937393'
-}
-
-dependencies {
 }
