--- a/emulatordetection/build.gradle
+++ b/emulatordetection/build.gradle
@@ -3,62 +3,83 @@ plugins {
 }
 
 ext {
-    PUBLISH_GROUP_ID = 'com.reveny.emulator.detection'
-    PUBLISH_ARTIFACT_ID = 'EmulatorDetectionPlugin'
-    PUBLISH_VERSION = '1.0'
+    PUBLISH_GROUP_ID = 'com.reveny.emulatordetection.plugin'
+    PUBLISH_ARTIFACT_ID = 'emulator-detection-plugin'
+    PUBLISH_VERSION = '1.5.0'
 }
 
 android {
-    namespace 'com.reveny.emulator.detection'
-    compileSdk 34
+    namespace 'com.reveny.emulatordetection.plugin'
+    compileSdk rootProject.ext.androidCompileSdkVersion
 
     defaultConfig {
-        minSdk 24
+        minSdk rootProject.ext.androidMinSdkVersion
 
-        versionCode 4
-        versionName "4.0"
+        versionCode rootProject.ext.verCode
+        versionName rootProject.ext.verName
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
         }
 
-        libraryVariants.all { variant ->
+        libraryVariants.configureEach { variant ->
             def variantName = variant.name.capitalize()
             def copyTaskName = "copy${variantName}Artifacts"
             def assembleTaskName = "assemble${variantName}"
-            task(copyTaskName, type: Copy, dependsOn: assembleTaskName, group: "build") {
+
+            tasks.register(copyTaskName, Copy) {
+                dependsOn tasks.named(assembleTaskName)
+                group = "build"
                 variant.outputs.each { output ->
                     def newOutputName = output.outputFile.name.replace(".aar", "-" + android.defaultConfig.versionName + ".aar")
                     from(output.outputFile.parent) {
                         include output.outputFile.name
-                        rename output.outputFile.name, newOutputName
+                        rename(output.outputFile.name, newOutputName)
                     }
                 }
-                //into project.buildDir
                 into(layout.buildDirectory.dir("../../release"))
             }
-            project.tasks.getByName(assembleTaskName).finalizedBy(copyTaskName)
+
+            tasks.named(assembleTaskName).configure {
+                finalizedBy(tasks.named(copyTaskName))
+            }
         }
     }
 
     buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
         debug {
             ndk {
                 debugSymbolLevel 'FULL'
             }
+            externalNativeBuild {
+                ndkBuild {
+                    arguments "APP_OPTIM=debug"
+                    arguments "NDK_DEBUG=1"
+                }
+            }
+        }
+        release {
+            externalNativeBuild {
+                ndkBuild {
+                    arguments "APP_OPTIM=release"
+                    arguments "NDK_DEBUG=0"
+                }
+            }
+
+            minifyEnabled false
+            multiDexEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+
     externalNativeBuild {
         ndkBuild {
-            path "src/main/jni/Android.mk"
+            path "src/main/jni/Build/Android.mk"
         }
     }
-    ndkVersion = '25.1.8937393'
+    ndkVersion = rootProject.ext.androidCompileNdkVersion
 }
