--- a/settings.gradle
+++ b/settings.gradle
@@ -1,18 +1,2 @@
-pluginManagement {
-    repositories {
-        google()
-        mavenCentral()
-        gradlePluginPortal()
-    }
-}
-dependencyResolutionManagement {
-    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
-
-rootProject.name = "AndroidEmulatorDetection"
-include ':emulatordetection'
-include ':sample'
+rootProject.name = "Emulator Detector Sample"
+include ':app', ':emulatordetection'
